tests/baselines/reference/moduleAugmentationsImports1.errors.txt
d.ts(3,1): error TS18056: Declaration file contains hand-written file reference directives: "c.d.ts"


==== a.ts (0 errors) ====
    export class A {}
    
==== b.ts (0 errors) ====
    export class B {x: number;}
    
==== c.d.ts (0 errors) ====
    declare module "C" {
        class Cls {y: string; }
    }
    
==== d.ts (1 errors) ====
    /// <reference path="c.d.ts"/>
    
    import {A} from "./a";
    ~~~~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "c.d.ts"
    import {B} from "./b";
    import {Cls} from "C";
    
    A.prototype.getB = function () { return undefined; }
    A.prototype.getCls = function () { return undefined; }
    
    declare module "./a" {
        interface A {
            getB(): B;
        }
    }
    
    declare module "./a" {
        interface A {
            getCls(): Cls;
        }
    }
    
==== main.ts (0 errors) ====
    import {A} from "./a";
    import "d";
    
    let a: A;
    let b = a.getB().x.toFixed();
    let c = a.getCls().y.toLowerCase();
    